Revision history for Perl extension Tk::DateEntry.

1.41
	- no need to call _decode_posix_bytes in newer perls (>=5.22)

1.40
	- no code changes, just distribution-handling fixes and
	  improvements

1.39
	- no changes to previous development version

1.38_94
	- localized monthnames now work also on Windows systems
	- new option -dayname (with test and documentation)
	- new Makefile target "demo"

1.38_93
	- using the encoding detection logic from
          Locale::Maketext::Lexicon which could also work on
          non-I18N::Langinfo and Windows systems (unchecked!)

1.38_92
	- fixed display of localized month names when using
	  a non ascii/latin1 locale 
	- test suite: protect from grab errors and other fixes

1.38_91
	- added new dateformat 4 (YYYY-MM-DD)
	- new tests
	- skip tests if MainWindow cannot be created

1.38_90
	- added Date::P/Calc support (by Christoph Lamprecht)

1.38
	- new -configcmd option

1.37
	- warning fix by Dan Rawson

1.36
	- the grab issue again - removed FocusOut binding

1.35
	- keyboard shortcuts for inc/decreasing day/month/year
	  (patch submitted by Diab Jerius)

1.34
	- warning fix for months with less than 31 days
	  (patch submitted by Dakkar)

1.33
	- save grab status

1.32
	- Use method calls instead of subroutine references in callbacks

1.31
	- Use FireButton instead of Button if installed.
	- Fixed -todaybackground bug.

1.3
	- Fixed the -background bug.
	- Added some key bindings.

1.2
	- POD doc, several internal improvements.

1.1
	- Some changes due to suggestions from somebody on the net.